--- a/src/style/App.css
+++ b/src/style/App.css
@@ -4,7 +4,7 @@
   --background: #141519;
   --modal-color: #242832;
   --font-color: #ffffff;
-  --overlay-color: #fb7711;
+  --orange: #fb7711;
 }
 
 body {
@@ -19,11 +19,12 @@ body {
   z-index: 0;
 }
 .modal-rating {
-  background-color: #fb7711;
+  background-color: var(--orange);
   padding: 20px;
   color: var(--font-color);
-  font-family: sans-serif;
-  max-width: 429px;
+  font-family: serif;
+  max-width: 350px;
+  aspect-ratio: 1;
   width: 95%;
   border-radius: 10px;
   z-index: 2;
@@ -35,4 +36,67 @@ body {
   background-color: var(--modal-color);
   border-radius: 10px;
   transform: translate(5px, -5px);
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+.modal-rating i {
+  color: var(--orange);
+  background-color: #26303b;
+  padding: 10px;
+  border-radius: 50%;
+  width: 4%;
+  aspect-ratio: 1;
+}
+.modal-rating p {
+  font-size: 16px;
+  color: #a4a9b2;
+}
+.modal-rating .rating {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
+}
+.modal-rating .rating label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1em;
+  height: 1em;
+  padding: 20px;
+  font-size: 20px;
+  margin-top: 25px;
+  color: #a4a9b2;
+  background-color: #26303b;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.modal-rating .rating input[type="radio"] {
+  display: none;
+}
+.modal-rating .rating label:hover {
+  background-color: #7c8897;
+  color: #ffffff;
+}
+.modal-rating .rating input:checked + label {
+  background-color: var(--orange);
+  color: #ffffff;
+}
+.modal-rating button[type="submit"] {
+  background-color: var(--orange);
+  color: #ffffff;
+  width: 100%;
+  padding: 15px;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  border-radius: 99px;
+  border: 0px;
+  margin-top: 33px;
+  cursor: pointer;
+}
+.modal-rating button[type="submit"]:hover {
+  color: #fb7711;
+  background-color: #ffffff;
 }
